# pwcca-auto-gui

./: .rustfmt.toml  README.md  bun.lockb  index.html  package.json  tailwind.config.js  vite.config.ts
src/: index.css  index.tsx  invokeTauri.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: commands.rs  config.rs  main.rs  panic_catching.rs  threading.rs  types.rs  windows_event.rs
src-tauri/src/mods/: mod.rs
src-tauri/src/mods/connection/: mod.rs
src-tauri/src/mods/connection/types/: error.rs  mod.rs  wlan.rs
src-tauri/src/mods/display/: mod.rs
src-tauri/src/mods/hotkey/: mod.rs
src-tauri/src/mods/hotkey/types/: keyboard.rs  mod.rs
src-tauri/src/mods/media/: mod.rs  policy_config.rs
src-tauri/src/mods/media/types/: mod.rs
src-tauri/src/mods/power/: mod.rs
src-tauri/src/mods/process/: mod.rs
src-tauri/src/mods/program/: mod.rs
src-tauri/src/mods/startup/registry/: mod.rs
src-tauri/src/mods/startup/registry/types/: regkey.rs
src-tauri/src/mods/startup/task_scheduler/: mod.rs
src-tauri/src/mods/taskbar/: mod.rs
src-tauri/src/mods/taskbar/types/: mod.rs
src/components/: Close.tsx  Title.tsx
src/components/card/: frameCard.tsx  itemCard.tsx
src/components/cards/: dataCard.tsx  frameCard.tsx  infoCard.tsx  itemCard.tsx
src/components/styles/: Comps.module.css
src/components/svg/: SVGBackArrow.tsx  SVGComputer.tsx  SVGMute.tsx  SVGPlus.tsx  SVGQuit.tsx  SVGSad.tsx  SVGSpinner.tsx  SVGTrash.tsx  SVGUnmute.tsx
src/data/: config.ts  settingAnimation.ts  tauriInvoke.ts
src/pages/: root.tsx
src/pages/Home/: index.tsx
src/pages/Home/components/buttons/: blank.tsx  creds.tsx  files.tsx  moreInfo.tsx  setting.tsx  specialButton.tsx  toggle.tsx
src/pages/Home/components/buttons/display/: quitApp.tsx  refreshRateButton.tsx  turnOffDisplay.tsx
src/pages/Home/components/buttons/toggles/: ethernetButton.tsx  refreshRateButton.tsx  runWithWindows.tsx  taskbarButton.tsx
src/pages/Home/components/cards/: cpuCard.tsx  creds.tsx  displayCard.tsx  powerCard.tsx  ramCard.tsx  settingsCard.tsx  togglesCard.tsx
src/pages/Mute/: index.tsx
src/pages/Settings/: autostart.tsx  battery.tsx  index.tsx  layout.tsx  microphone.tsx  power.tsx  taskbar.tsx
src/pages/Settings/Power/: Percentage.tsx  Timer.tsx
