[package]
name = "pwcca-auto"
version = "0.0.0"
description = "PwccaAuto"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
  "window-hide",
  "window-start-dragging",
  "window-close",
  "dialog-message",
  "system-tray",
  "shell-open",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = { version = "0.58.0", features = [
  'Devices_Radios',
  'Foundation_Collections',
  'Win32_Devices_FunctionDiscovery',
  'Win32_Graphics_Gdi',
  'Win32_Media_Audio',
  'Win32_NetworkManagement_IpHelper',
  'Win32_NetworkManagement_Ndis',
  'Win32_NetworkManagement_WiFi',
  'Win32_Networking_WinSock',
  'Win32_System_Com',
  'Win32_System_Power',
  'Win32_System_ProcessStatus',
  'Win32_System_Threading',
  'Win32_UI_Shell_PropertiesSystem',
  'Win32_UI_WindowsAndMessaging'
] }
sysinfo = "0.30.13"
anyhow = "1.0.86"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
