[package]
name = "PwccaAutoGUI"
version = "0.0.0"
description = "PwccaAutoGUI"
authors = ["YMGPwcca"]
edition = "2021"
build = "build.rs"

[[bin]]
name = "PwccaAutoGUI"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0.86"
regex = "1.11.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "image-png", "image-ico"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
windows = { version = "0.58.0", features = [
  "Win32_Devices_FunctionDiscovery",
  "Win32_Graphics_Gdi",
  "Win32_Media_Audio",
  "Win32_NetworkManagement_IpHelper",
  "Win32_NetworkManagement_Ndis",
  "Win32_NetworkManagement_WiFi",
  "Win32_Networking_WinSock",
  "Win32_Security",
  "Win32_System_Com",
  "Win32_System_LibraryLoader",
  "Win32_System_Ole",
  "Win32_System_Power",
  "Win32_System_ProcessStatus",
  "Win32_System_Registry",
  "Win32_System_SystemInformation",
  "Win32_System_TaskScheduler",
  "Win32_System_Threading",
  "Win32_System_WindowsProgramming",
  "Win32_UI_Shell",
  "Win32_UI_Shell_PropertiesSystem",
  "Win32_UI_WindowsAndMessaging",
] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
